<resources>
    <string name="locale_en">English</string>
    <string name="locale_pt">Portuguese</string>
    <string name="locale_fr">French</string>
    <string-array name="languages">
        <item>@string/locale_en</item>
        <item>@string/locale_pt</item>
        <item>@string/locale_fr</item>
    </string-array>
    <string-array name="languageValues" translatable="false">
        <item>en</item>
        <item>pt</item>
        <item>fr</item>
    </string-array>
    <string name="app_name">Titan Companion</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Titan Companion</string>
    <string name="saved_games">Saved games: </string>
    <string name="create_new_adventure">Start New Adventure</string>
    <string name="load_adventure">Load Adventure</string>
    <string name="title_activity_gamebook_list">Gamebook List</string>
    <string name="viewSite">View Description</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="twofm">The Warlock of Firetop Mountain</string>
    <string name="tcoc">The Citadel of Chaos</string>
    <string name="tfod">The Forest of Doom</string>
    <string name="st">Starship Traveller</string>
    <string name="cot">City of Thieves</string>
    <string name="dd">Deathtrap Dungeon</string>
    <string name="iotlk">Island of the Lizard King</string>
    <string name="ss">Scorpion Swamp</string>
    <string name="cotsw">Caverns of the Snow Witch</string>
    <string name="hoh">House of Hell</string>
    <string name="tod">Talisman of Death</string>
    <string name="sa">Space Assassin</string>
    <string name="ff">Freeway Fighter</string>
    <string name="tot">Temple of Terror</string>
    <string name="trok">The Rings of Kether</string>
    <string name="sob">Seas of Blood</string>
    <string name="awf">Appointment with F.E.A.R.</string>
    <string name="rp">Rebel Planet</string>
    <string name="dotd">Demons of the Deep</string>
    <string name="sots">Sword of the Samurai</string>
    <string name="toc">Trial of Champions</string>
    <string name="rc">Robot Commando</string>
    <string name="mom">Masks of Mayhem</string>
    <string name="coh">Creature of Havoc</string>
    <string name="bnc">Beneath Nightmare Castle</string>
    <string name="cots">Crypt of the Sorcerer</string>
    <string name="strider">Star Strider</string>
    <string name="pof">Phantoms of Fear</string>
    <string name="mr">Midnight Rogue</string>
    <string name="com">Chasms of Malice</string>
    <string name="bw">Battleblade Warrior</string>
    <string name="sota">Slaves of the Abyss</string>
    <string name="sl">Sky Lord</string>
    <string name="sos">Stealer of Souls</string>
    <string name="dod">Daggers of Darkness</string>
    <string name="aod">Armies of Death</string>
    <string name="poe">Portal of Evil</string>
    <string name="votv">Vault of the Vampire</string>
    <string name="fof">Fangs of Fury</string>
    <string name="don">Dead of Night</string>
    <string name="moc">Master of Chaos</string>
    <string name="bvp">Black Vein Prophecy</string>
    <string name="tkotll">The Keep of the Lich Lord</string>
    <string name="lotsw">Legend of the Shadow Warriors</string>
    <string name="spectral">Spectral Stalkers</string>
    <string name="tower">Tower of Destruction</string>
    <string name="tct">The Crimson Tide</string>
    <string name="moon">Moonrunner</string>
    <string name="siege">Siege of Sardath</string>
    <string name="rtfm">Return to Firetop Mountain</string>
    <string name="iotu">Island of the Undead</string>
    <string name="nd">Night Dragon</string>
    <string name="s">Spellbreaker</string>
    <string name="loz">Legend of Zagor</string>
    <string name="d">Deathmoor</string>
    <string name="kod">Knights of Doom</string>
    <string name="m">Magehunter</string>
    <string name="rotv">Revenge of the Vampire</string>
    <string name="cotm">Curse of the Mummy</string>
    <string name="eotd">Eye of the Dragon</string>
    <string name="bb">Bloodbones</string>
    <string name="hotw">Howl of the Werewolf</string>
    <string name="tpop">The Port of Peril</string>
    <string name="god">The Gates of Death</string>
    <string name="twofm_url" translatable="false">http://fightingfantasy.wikia.com/wiki/The_Warlock_of_Firetop_Mountain_(book)</string>
    <string name="tcoc_url" translatable="false">http://fightingfantasy.wikia.com/wiki/The_Citadel_of_Chaos_(book)</string>
    <string name="tfod_url" translatable="false">http://fightingfantasy.wikia.com/wiki/The_Forest_of_Doom_(book)</string>
    <string name="st_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Starship_Traveller</string>
    <string name="cot_url" translatable="false">http://fightingfantasy.wikia.com/wiki/City_of_Thieves_(book)</string>
    <string name="dd_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Deathtrap_Dungeon_(book)</string>
    <string name="iotlk_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Island_of_the_Lizard_King_(book)</string>
    <string name="ss_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Scorpion_Swamp_(book)</string>
    <string name="cotsw_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Caverns_of_the_Snow_Witch_(book)</string>
    <string name="hoh_url" translatable="false">http://fightingfantasy.wikia.com/wiki/House_of_Hell_(book)</string>
    <string name="tod_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Talisman_of_Death_(book)</string>
    <string name="sa_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Space_Assassin</string>
    <string name="ff_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Freeway_Fighter</string>
    <string name="tot_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Temple_of_Terror_(book)</string>
    <string name="trok_url" translatable="false">http://fightingfantasy.wikia.com/wiki/The_Rings_of_Kether</string>
    <string name="sob_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Seas_of_Blood_(book)</string>
    <string name="awf_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Appointment_with_F.E.A.R._(book)</string>
    <string name="rp_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Rebel_Planet_(book)</string>
    <string name="dotd_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Demons_of_the_Deep_(book)</string>
    <string name="sots_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Sword_of_the_Samurai_(book)</string>
    <string name="toc_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Trial_of_Champions_(book)</string>
    <string name="rc_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Robot_Commando</string>
    <string name="mom_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Masks_of_Mayhem</string>
    <string name="coh_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Creature_of_Havoc_(book)</string>
    <string name="bnc_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Beneath_Nightmare_Castle</string>
    <string name="cots_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Crypt_of_the_Sorcerer</string>
    <string name="strider_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Star_Strider</string>
    <string name="pof_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Phantoms_of_Fear</string>
    <string name="mr_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Midnight_Rogue</string>
    <string name="com_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Chasms_of_Malice</string>
    <string name="bw_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Battleblade_Warrior</string>
    <string name="sota_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Slaves_of_the_Abyss</string>
    <string name="sl_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Sky_Lord</string>
    <string name="sos_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Stealer_of_Souls</string>
    <string name="dod_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Daggers_of_Darkness</string>
    <string name="aod_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Armies_of_Death</string>
    <string name="poe_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Portal_of_Evil_(book)</string>
    <string name="votv_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Vault_of_the_Vampire</string>
    <string name="fof_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Fangs_of_Fury_(book)</string>
    <string name="don_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Dead_of_Night</string>
    <string name="moc_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Master_of_Chaos</string>
    <string name="bvp_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Black_Vein_Prophecy</string>
    <string name="tkotll_url" translatable="false">http://fightingfantasy.wikia.com/wiki/The_Keep_of_the_Lich-Lord</string>
    <string name="lotsw_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Legend_of_the_Shadow_Warriors</string>
    <string name="spectral_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Spectral_Stalkers_(book)</string>
    <string name="tower_url" translatable="false">http://fightingfantasy.wikia.com/wiki/Tower_of_Destruction_(book)</string>
    <string name="selectedGamebookCover">Selected Gamebook Cover</string>
    <string name="skill">Skill: </string>
    <string name="stamina">Stamina: </string>
    <string name="luck">Luck: </string>
    <string name="name">Name:</string>
    <string name="saveAdventure">Save Adventure</string>
    <string name="rollStats">Reroll Statistics</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="testLuck">Test Luck</string>
    <string name="testSkill">Test Skill</string>
    <string name="gold">Gold:</string>
    <string name="addEquipment">Add Equipment</string>
    <string name="escape">Escape</string>
    <string name="attackOpponent">Attack Opponent</string>
    <string name="spellList">Available Spells:</string>
    <string name="selectedSpellList">Selected Spells:</string>
    <string name="spellScore">Remaining Spell Points: </string>
    <string name="number_1" translatable="false">1</string>
    <string name="consumeProvisions">Consume Provisions</string>
    <string name="language">Language</string>
    <string name="languageDesc">Language for the App interface.</string>
    <string name="locale">Regional Preferences</string>
    <string name="geshrak" translatable="false">Geshrak</string>
    <string name="gurskut" translatable="false">Gurskut</string>
    <string name="friankara" translatable="false">Friankara</string>
    <string name="barkek" translatable="false">Barkek</string>
    <string name="griffkek" translatable="false">Griffkek</string>
    <string name="churka" translatable="false">Churka</string>
    <string name="kahhrac" translatable="false">Kahhrac</string>
    <string name="kuddams" translatable="false">Kuddams</string>
    <string name="other">Other</string>
    <string name="replenishLuck">Replenish Luck</string>
    <string name="replenishSkill">Replenish Skill</string>
    <string name="importSavegames">Import Savegames</string>
    <string name="importSavegamesDesc">Import savegames from the previous format to the new one.</string>
    <string name="savegameImportButton" translatable="false">savegameImport</string>
    <string name="faith">Faith</string>
    <string name="addSpell">Add Spell</string>
</resources>