<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/locale">

        <ListPreference
            android:key="lang"
            android:title="@string/language"
            android:summary="@string/languageDesc"
            android:entries="@array/languages"
            android:entryValues="@array/languageValues"
            android:defaultValue="@string/locale_en"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/saved_games">

        <Preference
            android:title="@string/importSavegames"
            android:key="@string/savegameImportButton"
            android:summary="@string/importSavegamesDesc"/>

    </PreferenceCategory>

</PreferenceScreen>