<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/adventureVitalStats"
              android:layout_gravity="center"
              android:gravity="center"
              android:layout_height="wrap_content"
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:padding="10dp">

    <Button
            android:id="@+id/tabashaReplenishSkillButton"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/replenishSkill"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

    <Button
            android:id="@+id/tabashaReplenishLuckButton"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/replenishLuck"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

    <Button
            android:id="@+id/tabashaOtherButton"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/other"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>


</LinearLayout>