<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/adventureVitalStats"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:useDefaultMargins="true"
    tools:context=".adventure.impl.fragments.AdventureCombatFragment" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skill"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <NumberPicker
        android:id="@+id/enemyskillPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/combatResult"
        android:layout_below="@+id/textView1" />

    <TextView
        android:id="@+id/combatResult"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/enemyskillPicker"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/enemyskillPicker"
        android:layout_centerHorizontal="true"
        android:text="@string/stamina"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <NumberPicker
        android:id="@+id/enemyStaminaPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/combatResult"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/buttonEscape"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/escape" />

    <Button
        android:id="@+id/buttonTestCombatLuck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/buttonEscape"
        android:layout_alignLeft="@+id/buttonAttack"
        android:layout_toLeftOf="@+id/buttonEscape"
        android:text="@string/testLuck" />

    <Button
        android:id="@+id/buttonAttack"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonEscape"
        android:layout_alignRight="@+id/buttonEscape"
        android:text="@string/attackOpponent" />

</RelativeLayout>