<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:weightSum="2"
    tools:context=".adventure.impl.fragments.votv.VOTVAdventureEquipmentFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/goldLabel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/gold"
            android:textAppearance="?android:attr/textAppearanceLarge" />


        <Button
            android:id="@+id/minusGoldButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/plusGoldButton"
            android:layout_alignBottom="@+id/plusGoldButton"
            android:layout_toLeftOf="@+id/goldValue"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/minus" />

        <TextView
            android:id="@+id/goldValue"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/plusGoldButton"
            android:layout_alignBottom="@+id/plusGoldButton"
            android:layout_toLeftOf="@+id/plusGoldButton"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/plusGoldButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/plus" />
    </RelativeLayout>


    <ListView
        android:id="@+id/equipmentList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="@drawable/border_back" />

    <Button
        android:id="@+id/buttonAddEquipment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/addEquipment" />

    <ListView
        android:id="@+id/spellList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="@drawable/border_back" />

    <Button
        android:id="@+id/buttonAddSpell"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/addSpell" />
</LinearLayout>