<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".GamebookSelectionActivity$GamebookSelectionFragment">

    <ImageView
            android:id="@+id/gamebookCoverImg"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/buttonSite"
            android:layout_alignLeft="@+id/buttonSite"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/buttonSite"
            android:layout_centerVertical="true"
            android:contentDescription="@string/selectedGamebookCover"
            android:scaleType="fitCenter"/>

    <Button
            android:id="@+id/buttonCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_new_adventure"
            android:layout_alignParentBottom="true"/>

    <Button
            android:id="@+id/buttonSite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonCreate"
            android:layout_alignLeft="@+id/buttonCreate"
            android:text="@string/viewSite"/>

</RelativeLayout>
